# 4tochki_parser

./: .env.example  Dockerfile  README.md  pyproject.toml  test.html
src/: config.py  logger.py  main.py
src/db/: __init__.py  config.py
src/db/filter/: model.py  repository.py
src/fortochki/: client.py  exceptions.py  utils.py
src/parser/: model.py  parser.py  utils.py
src/telegram/: api.py  schemas.py  service.py
src/terminal/: client.py
