[project]
name = "terminal-parser"
version = "0.1.0"
description = ""
authors = [
    {name = "a.cheremisin",email = "a.cheremisin@dostaevsky.ru"}
]
readme = "README.md"
package-mode=false
requires-python = ">=3.11"
dependencies = [
    "structlog (>=25.4.0,<26.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "redis (>=6.4.0,<7.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
